--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>šablona bootstrap</title>
+    <title>Šáňa - Vítejte v našem hotelu</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/app.css">
@@ -12,7 +12,78 @@
 
 </head>
 <body>
-  
+    <section id="uvod" class="d-flex justify-content-center align-items-center ">
+        <div id="header" class="container text-white">
+        <h1 class="h1">Sand Beach Resort</h1>
+        <h2 class="h2">We hope you´ll enjoy your stay.</h2>
+        <div id="reservation" class="container">
+            <h6>Rezervace</h6>
+            <form>
+            <div class="row">
+                <div class="col-12 col-md-4"><label for="jmeno">Jméno:</label><input type="text" id="jmeno" class="form-control bg-dark border-secondary text-white" placeholder="Jméno"></div>
+                <div class="col-12 col-md-4"><label for="prijmeni">Příjmení:</label><input type="text" id="prijmeni" class="form-control bg-dark border-secondary text-white" placeholder="Příjmení"></div>
+                <div class="col-12 col-md-4"><label for="mail">E-mail:</label><input type="email" class="form-control bg-dark border-secondary text-white" id="mail" placeholder="jan.novak@email.cz"></div>
+                </div>
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-3">
+                    <label for="phone">Telefon:</label>
+                    <input type="text" class="form-control bg-dark border-secondary text-white" id="phone" placeholder="+420 123 456 789"></div>
+                <div class="col-12 col-md-6 col-lg-2"> 
+
+                    <label for="osob">Počet osob:</label>
+                    <select class="custom-select bg-dark border-secondary text-white" id="osob" required>
+                      <option selected disabled value="">Vyberte počet osob</option>
+                      <option>1</option>
+                      <option>2</option>
+                      <option>3</option>
+                      <option>4</option>
+                      <option>5</option>
+                      <option>6</option>
+                      <option>7</option>
+                      <option>8</option>
+                      <option>9</option>
+                      <option>10</option>
+                    </select>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div class="form-group">
+                    <label class="control-label" for="date1">Termín od:</label>
+                    <input class="form-control bg-dark border-secondary text-white" id="date1" name="date" placeholder="DD/MM/YYYY" type="text"/>
+                  </div>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div class="form-group">
+                    <label class="control-label" for="date1">Termín do:</label>
+                    <input class="form-control bg-dark border-secondary text-white" id="date1" name="date" placeholder="DD/MM/YYYY" type="text"/>
+                  </div>
+                </div>
+                <div class="col-12 col-md-4 col-lg-3">
+                
+                    <label for="pokoj">Typ pokoje:</label>
+                    <select class="custom-select bg-dark border-secondary text-white" id="pokoj" required>
+                      <option selected disabled value="">Vyberte typ pokoje</option>
+                      <option>Jednolůžkový</option>
+                      <option>Dvoulůžkový</option>
+                      <option>Rodinný</option>
+                    </select>
+                
+                </div>
+            </div>
+            <div class="row justify-content-end">
+            <div class="col-12 text-right">
+
+                <div class="btn-group" role="group" aria-label="uvod_tlacitka">
+                    <button type="button" class="btn btn-primary m-1">Virtuální prohlídka</button>
+                    <button type="button" class="btn btn-primary m-1">Odeslat rezervaci</button>
+                  </div>
+
+            </div>
+            </div>
+            </div>
+        </form>
+        </div>
+        </div>
+      </section>
 
 <!-- JS -->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
