--- a/index.html
+++ b/index.html
@@ -95,19 +95,19 @@
         <div class="collapse navbar-collapse" id="menu">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link text-dark" href="#">Domů</a>
+              <a class="nav-link text-dark" href="#uvod">Domů</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-dark" href="#">Historie</a>
+              <a class="nav-link text-dark" href="#historie">Historie</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link text-dark" href="#">Ceník</a>
+                <a class="nav-link text-dark" href="#cenik">Ceník</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="#">Galerie</a>
+                <a class="nav-link text-dark" href="#galerie">Galerie</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="#">Kontakty</a>
+                <a class="nav-link text-dark" href="#kontakty">Kontakty</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-dark" href="icon.html">Icon</a>
