--- a/icon.html
+++ b/icon.html
@@ -8,8 +8,6 @@
     <title>Šáňa - Loading</title>
 </head>
 <body>
-    <p class="ikona">
-        
-    </p>
+    <p class="ikona"></div>
 </body>
 </html>
