--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       </section>
 
       <section id="cenik" class="bg-light p-2 pb-5">
-          <div class´="container-fluid">
+          <div class="container-fluid">
             <h2 class="h2 p-5 text-center text-dark">CENÍK</h2>
               <div class="row d-flex align-items-center">
                   <div class="col-12 col-md-6 col-xl-3">
@@ -376,24 +376,6 @@
               </div>
             </div>
       </section>
-
-<!-- MODAL
-<div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel"> Virtální prohlídka</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-            <iframe width="392" height="221" src="https://www.youtube.com/embed/FDdtZfCui40?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
-  </div>
--->
 
 <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
