--- a/index.html
+++ b/index.html
@@ -120,12 +120,15 @@
           <div class="container-fluid">
               <div class="row">
                   <div class="col-12 col-lg-4 p-3" id="history1">
-                    <h2>Historie</h2>
-                    <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus rerum qui minus. Veniam inventore aspernatur accusantium iste tempora totam numquam. Enim dicta officiis voluptatibus, ratione molestias nulla doloremque deleniti excepturi aliquid itaque consequatur doloribus error corrupti. Magni adipisci ipsa molestias aliquam deserunt molestiae architecto numquam ea explicabo! Quam, quia sunt.</p>
+                    <h2>Hrad Křivoklát</h2>
+                    <p class="lead">Křivoklát je jedním z nejstarších a nejvýznamnějších hradů českých knížat a králů.
+                      Jeho počátky sahají až do 12. století. Za panování Přemysla Otakara II. vznikl rozsáhlý, velkolepý královský hrad, na kterém již v dětství a opakovaně také v dospělosti pobýval Karel IV. Hrad byl výrazně přestavěn Václavem IV.  Později byl hrad velkoryse dobudován Vladislavem Jagellonským. Nádherná hradní kaple, Královský a Rytířský sál s expozicí gotického malířského a sochařského umění, knihovna obsahující na 52 tisíc svazků, bohaté fürstenberské muzeum a obrazárna, proslulé vězení a mučírny s mučícími nástroji, monumentální velká věž s loveckými sbírkami a výhledem do okolí, příjemná procházka po hradbách, věž Huderka s černou kuchyní a vyhlídkovým ochozem, hejtmanství s příležitostnými výstavami, to vše a ještě mnohem více je hrad Křivoklát, národní kulturní památka.</p>
                 </div>
                   <div class="col-12 col-lg-4 p-3" id="history2">
-                    <h2>Tradice</h2>
-                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus commodi enim ipsum in, quod quas eveniet facere sunt! Dignissimos quia unde doloremque odit vero laudantium cum quos tempore ratione esse.Magni adipisci ipsa molestias aliquam deserunt molestiae architecto numquam ea explicabo! Quam, quia sunt.</p>
+                    <h2>Ubytování</h2>
+                    <p class="lead">V hotelu je k dispozici ubytování v jednolůžkových nebo dvoulůžkových pokojích. Rodiny nebo větší skupiny mohou využít nabídku našich apartmánů. K dispozici je připojení k Wi-Fi internetu a parkování je pro hosty zdarma.
+                      Návštěvníci mohou využít recepci, která je k dispozici 24 hodin denně. Součástí hotelu je také restaurace, která nabízí snídaně, obědy a večeře formou švédských stolů. Celý hotel je nekuřácký a pro kuřáky je vyhrazené místo před vchodem.
+                      </p>
                 </div>
                   <div class="d-none d-lg-block col-md-4 align-items-center" id="historyimg"></div>
               </div>
